kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: ingress-nginx
  labels:
    app: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
      - name: notes-app
        image: priyankaceq/notes-making-app:updated
        ports:
        - containerPort: 8000
